--- a/src/css/news.css
+++ b/src/css/news.css
@@ -1,6 +1,20 @@
-#news {
+#news-text {
+    height: calc(100% - 1.5vw - 2px);
     overflow-y: auto;
     overflow-x: hidden;
+    font-size: 0.8rem;
+}
+
+#news-credit {
+    width: 100%;
+    height: 0.75rem;
+    margin-top: 0.25rem;
+    display: block;
+
+    font-size: 0.65rem;
+    line-height: 0.75rem;
+    text-align: right;
+    color: #aaa;
 }
 
 .article {
@@ -10,7 +24,7 @@
 
     display: flex;
     flex-direction: row;
-    font-size: 0.85rem;
+    font-size: 0.8rem;
 
     cursor: pointer;
     text-decoration: none;
@@ -23,10 +37,11 @@
 }
 
 .article-number {
-    flex-basis: 1.5rem;
+    flex-basis: 1rem;
     flex-shrink: 0;
     margin: 0;
     padding: 0;
+    font-size: 0.8rem;
     color: #ffc329;
 }
 
@@ -37,9 +52,13 @@
     width: calc(100% - 1vw);
 }
 
+.article-title {
+    font-size: 0.8rem;
+}
+
 .article-subtitle {
     margin-top: 0.1rem;
-    font-size: 0.75rem;
+    font-size: 0.65rem;
     color: #aaa;
     overflow: hidden;
     text-overflow: ellipsis;
